@@ -589,6 +589,22 @@ int Fl::ready()
   return screen_driver()->ready();
 }
 
+/** Run the event loop even without any mapped window if the platform supports it.
+ \return zero indicates the event loop has been terminated.
+ */
+int Fl::run_also_windowless() {
+  return Fl::system_driver()->run_also_windowless();
+}
+
+/** Wait for \p delay seconds or until an event occurs, even without any mapped window if the platform supports it.
+ \return non zero indicates the event loop should be terminated
+ */
+int Fl::wait_also_windowless(double delay) {
+  return Fl::system_driver()->wait_also_windowless(delay);
+}
+
+int Fl::program_should_quit_ = 0;
+
 ////////////////////////////////////////////////////////////////
 // Window list management:
 
